#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-35
2013-09-18 Matt Weaver
- moved pdsdata/xtc/SrcAlias class into alias.ddl.xml (Alias::SrcAlias)

Tag: V00-04-34
2013-09-17 Andy Salnikov
- documentation generation changed in SConsTools, updating SConscript

Tag: V00-04-33
2013-09-13 Matt Weaver
- add auto-constructors for more config types 
- add some special constructors for non-config types
- new alias::ConfigV1 type
- add xtc/SrcAlias class definition (included by alias definition)
- new BldEBeamV4 version
- results installed in pdsdata/psddl V07-00-00	
	
Tag: V00-04-32
2013-08-26 Andy Salnikov
- add auto-constructors for for EPICS types

Tag: V00-04-31
2013-08-26 Andy Salnikov
- add auto-constructors for some complex data types

Tag: V00-04-30
2013-08-14 Andy Salnikov
- add releaseCode() method to evr.EventCodeV5 and evr.EventCodeV6

Tag: V00-04-29
2013-07-16 Andy Salnikov
- imp: add one forgotten constant

Tag: V00-04-28
2013-05-22 Andy Salnikov
- bug fix in imp.ddl.xml, Sample._channels is 16 bit instead of 32

Tag: V00-04-27
2013-05-15 Andy Salnikov
- adding imp package

Tag: V00-04-26
2013-04-25 Andy Salnikov
- upgrading to pdsdata V06-07-04
- new class cspad.ConfigV5

Tag: V00-04-25
2013-04-23 Andy Salnikov
- pnccd.FullFrameV1 does not need xtc-config

Tag: V00-04-24
2013-03-29 Andy Salnikov
- wider use of enum base type feature

Tag: V00-04-23
2013-03-28 Andy Salnikov
- updated comments in acqiris schema

Tag: V00-04-22
2013-03-26 Andy Salnikov
- small changes to cspad scheme to make it work with HDF5

Tag: V00-04-21
2013-03-25 Andy Salnikov
- small changes to Orca scheme to make it work better with HDF5

Tag: V00-04-20