@@ -152,6 +152,12 @@
                 <code lang="C++" body="if ({self}.depth() &lt;= 8) return ndarray&lt;const uint16_t, 2&gt;(); return make_ndarray((const uint16_t*)_int_pixel_data().data(), height(), width());" />
             </method>
 
+            <method name="depth_bytes" type="uint32_t">
+                Number of bytes per pixel.
+                <tag name="inline"/>
+                <expr lang="C++" value="({self}.depth()+7)/8" />
+            </method>
+
             <ctor>
                 Default constructor
                 <tag name="inline"/>
